[project]
name = "spx-0dte-bot"
version = "0.1.0"
description = "SPX 0DTE signal pipeline — IB breakout, VIX divergence, gap analysis, and option recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.1.0",
    "pandas>=2.0.0",
    "finnhub-python>=2.4.28",
]
